RESOLVED FIXED 254362
ASSERTION FAILED: Options::useWebAssemblyGC()
https://bugs.webkit.org/show_bug.cgi?id=254362
Summary ASSERTION FAILED: Options::useWebAssemblyGC()
Justin Michaud
Reported 2023-03-23 12:50:48 PDT
assertion failure
Attachments
Justin Michaud
Comment 1 2023-03-23 12:50:50 PDT
Justin Michaud
Comment 2 2023-03-23 12:54:50 PDT
EWS
Comment 3 2023-03-23 16:19:27 PDT
Committed 262045@main (390aac0012e9): <https://commits.webkit.org/262045@main> Reviewed commits have been landed. Closing PR #11879 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.