ASSERTION FAILED: Options::useWebAssemblyGC() https://bugs.webkit.org/show_bug.cgi?id=254362 rdar://107126788

Reviewed by Yusuke Suzuki.

Quick assertion fix.

* Source/JavaScriptCore/wasm/WasmTypeDefinition.cpp:
(JSC::Wasm::TypeInformation::TypeInformation):

Canonical link: https://commits.webkit.org/262045@main